--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,9 +23,7 @@ body{
   color: #000;
 }
 
-.visually-hidden{
-  visibility: hidden;
-}
+
 
 /* header */
 
@@ -78,6 +76,32 @@ body{
 
 /*main*/
 
+.hero{
+  width: 1200px;
+  height: 485px;
+  margin: 0 auto;
+  background-image: url("../images/background-main-footer.svg"),
+   url("../images/main-background.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: center bottom, center;
+}
+
+.hero-background-welcome{
+  display: block;
+  margin: 0 auto;
+}
+
+.hero-background-gorgeous{
+  display: block;
+  margin: 0 auto;
+}
+
+.hero-background-sedona{
+  display: block;
+  margin: 0 auto;
+}
+
+
 .advantages{
   background: rgba(131, 179, 211, 0.12);
 }
@@ -99,6 +123,20 @@ body{
   line-height: 21px;
   text-align: center;
   color: #333333;
+}
+
+.advantages-image1{
+  background-image: url("../images/bg-advantages1.jpg");
+  width: 800px;
+  height: 384px;
+
+}
+
+.advantages-image2{
+  background-image: url("../images/bg-advantages2.jpg");
+  width: 800px;
+  height: 384px;
+
 }
 
 .white-text, .white-text p{
@@ -123,7 +161,13 @@ body{
 }
 
 .subscription{
+  background-image: url("../images/bg-subscribe.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #82B3D3;
+  width: 1200px;
+  height: 415px;
+  margin: 0 auto;
 }
 
 .subscription-title{
@@ -148,7 +192,14 @@ body{
 
 .inner-index-catalog{
   background-color: #82B3D3;
+  background-image: url("../images/catalog-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  width: 1200px;
+  height: 412px;
 }
+
 
 .inner-index-catalog-title{
   font-size: 60px;
@@ -203,6 +254,16 @@ body{
   line-height: 36px;
   text-align: center;
 }
+
+.catalog{
+  background-image: none;
+  background-color: #fff;
+}
+
+.black-text{
+  color: #000;
+}
+
 /* page-footer */
 
 .footer-socials-list{
