--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,7 +87,12 @@ body{
 }
 
 .hero-background-welcome{
-  display: block;
+  width: 188px;
+  height: 45px;
+  background-image: url("../images/welcome.svg");
+  background-repeat: no-repeat;
+
+
   margin: 0 auto;
 }
 
@@ -194,7 +199,7 @@ body{
 
 /* catalog-page */
 
-.inner-index-catalog{
+.inner-catalog{
   background-color: #82B3D3;
   background-image: url("../images/catalog-bg.jpg");
   background-size: cover;
@@ -205,7 +210,7 @@ body{
 }
 
 
-.inner-index-catalog-title{
+.inner-catalog-title{
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
@@ -220,7 +225,7 @@ body{
   color: #fff;
 }
 
-.inner-index-hotels-title{
+.inner-hotels-title{
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
