--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
   font-display: swap;
 }
 
-body{
+body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 20px;
@@ -23,30 +23,28 @@ body{
   color: #000;
 }
 
-
-
 /* header */
 
-.page-header{
+.page-header {
   font-size: 20px;
   line-height: 24px;
 }
 
-.navigation-list{
+.navigation-list {
   list-style-type: none;
 }
 
-.controls{
+.controls {
   list-style-type: none;
 }
 
-.navigation-link{
+.navigation-link {
   color: inherit;
   text-decoration: none;
   font-weight: 700;
 }
 
-.button{
+.button {
   background-color: #756157;
   color: #fff;
   font-weight: 700;
@@ -56,8 +54,7 @@ body{
   text-transform: uppercase;
 }
 
-
-.description-title{
+.description-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -65,9 +62,7 @@ body{
   text-align: center;
 }
 
-
-
-.description-reasons{
+.description-reasons {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -76,46 +71,44 @@ body{
 
 /*main*/
 
-.hero{
+.hero {
   width: 1200px;
   height: 485px;
   margin: 0 auto;
   background-image: url("../images/background-main-footer.svg"),
-   url("../images/main-background.jpg");
+    url("../images/main-background.jpg");
   background-repeat: no-repeat, no-repeat;
   background-position: center bottom, center;
 }
 
-.hero-background-welcome{
+.hero-background-welcome {
   width: 188px;
   height: 45px;
   background-image: url("../images/welcome.svg");
   background-repeat: no-repeat;
 
-
   margin: 0 auto;
 }
 
-.hero-background-gorgeous{
+.hero-background-gorgeous {
   display: block;
   margin: 0 auto;
 }
 
-.hero-background-sedona{
+.hero-background-sedona {
   display: block;
   margin: 0 auto;
 }
 
-
-.advantages{
+.advantages {
   background: rgba(131, 179, 211, 0.12);
 }
 
-.advantages-list{
+.advantages-list {
   list-style-type: none;
 }
 
-.advantages-title{
+.advantages-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -124,36 +117,34 @@ body{
   color: inherit;
 }
 
-.advatages-description{
+.advatages-description {
   line-height: 21px;
   text-align: center;
   color: #333;
 }
 
-.advantages-image1{
+.advantages-image1 {
   background-image: url("../images/bg-advantages1.jpg");
   width: 800px;
   height: 384px;
-
 }
 
-.advantages-image2{
+.advantages-image2 {
   background-image: url("../images/bg-advantages2.jpg");
   width: 800px;
   height: 384px;
-
 }
 
-.color-change{
+.color-change {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.white-text, .white-text p{
+.white-text {
   color: #fff;
-  background-color: #82B3D3;
+  background-color: #82b3d3;
 }
 
-.interested-title{
+.interested-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -161,25 +152,24 @@ body{
   text-align: center;
 }
 
-
-.interested-description{
+.interested-description {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
   color: #333;
 }
 
-.subscription{
+.subscription {
   background-image: url("../images/bg-subscribe.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #82B3D3;
+  background-color: #82b3d3;
   width: 1200px;
   height: 415px;
   margin: 0 auto;
 }
 
-.subscription-title{
+.subscription-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -188,19 +178,17 @@ body{
   text-align: center;
 }
 
-.subscription-description{
+.subscription-description {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
   color: #fff;
-
 }
-
 
 /* catalog-page */
 
-.inner-catalog{
-  background-color: #82B3D3;
+.inner-catalog {
+  background-color: #82b3d3;
   background-image: url("../images/catalog-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -209,54 +197,50 @@ body{
   height: 412px;
 }
 
-
-.inner-catalog-title{
+.inner-catalog-title {
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
   color: #fff;
 }
 
-
-
 .breadcrumbs-item,
 .catalog-filter-title,
-.control{
+.control {
   color: #fff;
 }
 
-.inner-hotels-title{
+.inner-hotels-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
 }
 
-.hotels-title{
+.hotels-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
 }
 
 .hotels-type,
-.hotels-price{
+.hotels-price {
   line-height: 21px;
 }
 
-.button-blue{
-  background-color: #82B3D3;
+.button-blue {
+  background-color: #82b3d3;
   color: #fff;
 }
 
-
-.pagination{
-  list-style-type: none;;
+.pagination-list {
+  list-style-type: none;
 }
-.pagination-item{
- background-color: #82B3D3;
+.pagination-item {
+  background-color: #82b3d3;
 }
 
-.pagination-link{
+.pagination-link {
   color: #fff;
   font-weight: 700;
   font-size: 20px;
@@ -264,43 +248,43 @@ body{
   text-align: center;
 }
 
-.catalog{
+.catalog {
   background-image: none;
   background-color: #fff;
 }
 
-.black-text{
+.black-text {
   color: #000;
 }
 
 /* page-footer */
 
-.footer-socials-list{
+.footer-socials-list {
   list-style-type: none;
 }
 
-.button-vk{
+.button-vk {
   background-color: #fff;
   background-image: url("../images/socials/vk-icon.svg");
   background-repeat: no-repeat;
 }
 
-.button-telegram{
+.button-telegram {
   background-color: #fff;
   background-image: url("../images/socials/tg-icon.svg");
   background-repeat: no-repeat;
 }
 
-.button-youtube{
+.button-youtube {
   background-color: #fff;
   background-image: url("../images/socials/youtube-icon.svg");
   background-repeat: no-repeat;
 }
 
-.footer-contacts-phone{
+.footer-contacts-phone {
   font-size: 40px;
   line-height: 40px;
   text-align: center;
-  text-decoration: none;;
+  text-decoration: none;
   color: #000;
 }
