--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,28 +42,10 @@ body {
   line-height: 24px;
 }
 
-.logo {
-  margin-right: 40px;
-  margin-left: 70px;
-}
-
 .navigation {
   display: flex;
-}
-
-.navigation-list {
-  list-style-type: none;
-  width: 420px;
-  margin: 0;
-  padding: 0;
-}
-
-.controls-list {
-  list-style-type: none;
-  width: 300px;
-  margin: 0;
-  padding: 0;
-  margin-left: auto;
+  justify-content: space-between;
+  padding: 0 70px;
 }
 
 .navigation-link {
