--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,12 @@ body {
   min-height: 100%;
 }
 
+.reset-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .main-index {
   flex-grow: 1;
 }
