Изменяет имя класса контейнера

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,7 +270,7 @@ ol {
   line-height: 28px;
 }
 
-.catalog-container {
+.filter-container {
   display: flex;
   width: 1060px;
   margin: 0 auto;
