Добавляет внутренние отступы вместо центрирования по центру

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -272,8 +272,7 @@ ol {
 
 .filter-container {
   display: flex;
-  width: 1060px;
-  margin: 0 auto;
+  padding: 35px 70px 70px 70px;
 }
 
 .catalog-filter-group {
