--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,16 @@
   font-display: swap;
 }
 
+:root {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-brown: #756157;
+  --color-darkgray: #333;
+  --color-lightblue: #82b3d3;
+  --color-lightblue-12: rgba(131, 179, 211, 0.12);
+  --color-lightblue-20: rgba(131, 179, 211, 0.2);
+}
+
 html {
   height: 100%;
 }
@@ -26,8 +36,8 @@ body {
   font-size: 18px;
   line-height: 20px;
   font-weight: 400;
-  background-color: #fff;
-  color: #000;
+  background-color: var(--color-white);
+  color: var(--color-black);
   margin: 0 auto;
   min-height: 100%;
 }
@@ -62,8 +72,8 @@ ol {
 }
 
 .button {
-  background-color: #756157;
-  color: #fff;
+  background-color: var(--color-brown);
+  color: var(--color-white);
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -83,7 +93,7 @@ ol {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  color: #333;
+  color: var(--color-darkgray);
 }
 
 /*main*/
@@ -103,7 +113,6 @@ ol {
   height: 45px;
   background-image: url("../images/welcome.svg");
   background-repeat: no-repeat;
-
   margin: 0 auto;
 }
 
@@ -118,13 +127,10 @@ ol {
 }
 
 .advantages {
-  background: rgba(131, 179, 211, 0.12);
+  background-color: var(--color-lightblue-12);
 }
 
 .advantages-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-wrap: wrap;
 }
@@ -148,7 +154,7 @@ ol {
 .advatages-description {
   line-height: 21px;
   text-align: center;
-  color: #333;
+  color: var(--color-darkgray);
 }
 
 .advantages-image1 {
@@ -164,12 +170,12 @@ ol {
 }
 
 .color-change {
-  background-color: rgba(131, 179, 211, 0.2);
+  background-color: var(--color-lightblue-20);
 }
 
 .white-text {
-  color: #fff;
-  background-color: #82b3d3;
+  color: var(--color-white);
+  background-color: var(--color-lightblue);
 }
 
 .interested-title {
@@ -184,14 +190,14 @@ ol {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  color: #333;
+  color: var(--color-darkgray);
 }
 
 .subscription {
   background-image: url("../images/bg-subscribe.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #82b3d3;
+  background-color: var(--color-lightblue);
   width: 1200px;
   height: 415px;
   margin: 0 auto;
@@ -202,7 +208,7 @@ ol {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  color: #fff;
+  color: var(--color-white);
   text-align: center;
 }
 
@@ -210,13 +216,13 @@ ol {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-  color: #fff;
+  color: var(--color-white);
 }
 
 /* catalog-page */
 
 .inner-catalog {
-  background-color: #82b3d3;
+  background-color: var(--color-lightblue);
   background-image: url("../images/catalog-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -229,13 +235,13 @@ ol {
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
-  color: #fff;
+  color: var(--color-white);
 }
 
 .breadcrumbs-item,
 .catalog-filter-title,
 .control {
-  color: #fff;
+  color: var(--color-white);
 }
 
 .inner-hotels {
@@ -244,12 +250,6 @@ ol {
 }
 
 .control-select {
-}
-
-.sorting-icons-list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
 }
 
 .inner-hotels-title {
@@ -278,12 +278,10 @@ ol {
 
 .checkbox-group {
   width: 151px;
-  /* margin-right: 70px; */
 }
 
 .radio-group {
   width: 151px;
-  /* margin-right: 140px; */
 }
 
 .input-range-group {
@@ -293,8 +291,6 @@ ol {
 .hotels-list {
   display: flex;
   flex-wrap: wrap;
-  list-style-type: none;
-  padding: 0;
 }
 
 .hotels-item {
@@ -312,20 +308,16 @@ ol {
 }
 
 .button-blue {
-  background-color: #82b3d3;
-  color: #fff;
-}
-
-.pagination-list {
-  list-style-type: none;
+  background-color: var(--color-lightblue);
+  color: var(--color-white);
 }
 
 .pagination-item {
-  background-color: #82b3d3;
+  background-color: var(--color-lightblue);
 }
 
 .pagination-link {
-  color: #fff;
+  color: var(--color-white);
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -334,11 +326,11 @@ ol {
 
 .catalog {
   background-image: none;
-  background-color: #fff;
+  background-color: var(--color-white);
 }
 
 .black-text {
-  color: #000;
+  color: var(--color-black);
 }
 
 /* page-footer */
@@ -348,24 +340,20 @@ ol {
   justify-content: space-between;
 }
 
-.footer-socials-list {
-  list-style-type: none;
-}
-
 .button-vk {
-  background-color: #fff;
+  background-color: var(--color-white);
   background-image: url("../images/socials/vk-icon.svg");
   background-repeat: no-repeat;
 }
 
 .button-telegram {
-  background-color: #fff;
+  background-color: var(--color-white);
   background-image: url("../images/socials/tg-icon.svg");
   background-repeat: no-repeat;
 }
 
 .button-youtube {
-  background-color: #fff;
+  background-color: var(--color-white);
   background-image: url("../images/socials/youtube-icon.svg");
   background-repeat: no-repeat;
 }
@@ -375,5 +363,5 @@ ol {
   line-height: 40px;
   text-align: center;
   text-decoration: none;
-  color: #000;
+  color: var(--color-black);
 }
