--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,26 @@ ol {
   list-style-type: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .main-index {
   flex-grow: 1;
 }
@@ -61,14 +81,44 @@ ol {
 
 .navigation {
   display: flex;
-  justify-content: space-between;
   padding: 0 70px;
+}
+
+.logo {
+  margin-right: 44px;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  width: 990px;
+}
+
+.navigation-list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navigation-link {
   color: inherit;
   text-decoration: none;
   font-weight: 700;
+  margin-right: 32px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: block;
+}
+
+.controls-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.controls-list .controls-link {
+  display: block;
+  padding-top: 22px;
+  padding-bottom: 22px;
+  margin-right: 25px;
 }
 
 .button {
@@ -108,22 +158,44 @@ ol {
   background-position: center bottom, center;
 }
 
+.hero-container {
+  padding-top: 51px;
+}
+
 .hero-background-welcome {
   width: 188px;
   height: 45px;
   background-image: url("../images/welcome.svg");
   background-repeat: no-repeat;
   margin: 0 auto;
+  margin-bottom: 11px;
 }
 
 .hero-background-gorgeous {
   display: block;
   margin: 0 auto;
+  margin-bottom: 54px;
 }
 
 .hero-background-sedona {
   display: block;
   margin: 0 auto;
+}
+
+.description {
+  padding-top: 69px;
+  padding-bottom: 90px;
+}
+
+.description-title {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 25px;
+}
+
+.description-reasons {
+  padding: 0;
+  margin: 0;
 }
 
 .advantages {
@@ -137,10 +209,21 @@ ol {
 
 .advantages-item {
   width: 400px;
+  padding: 103px 85px 121px 85px;
+  box-sizing: border-box;
+}
+
+.advantages-item-white {
+  background-color: #fff;
+}
+
+.advantages-item-smaller {
+  padding: 92px 85px 111px 85px;
 }
 
 .wide-element {
   width: 800px;
+  padding: 0;
 }
 
 .advantages-title {
@@ -149,6 +232,7 @@ ol {
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
+  margin-bottom: 62px;
 }
 
 .advatages-description {
@@ -178,12 +262,18 @@ ol {
   background-color: var(--color-lightblue);
 }
 
+.interested {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
 .interested-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .interested-description {
@@ -191,6 +281,14 @@ ol {
   line-height: 26px;
   text-align: center;
   color: var(--color-darkgray);
+  padding-bottom: 62px;
+}
+
+.interested-search {
+  display: block;
+  margin: 0 auto;
+  padding: 8px 50px;
+  width: fit-content;
 }
 
 .subscription {
@@ -201,6 +299,9 @@ ol {
   width: 1200px;
   height: 415px;
   margin: 0 auto;
+  padding-top: 96px;
+  padding-bottom: 104px;
+  box-sizing: border-box;
 }
 
 .subscription-title {
@@ -210,6 +311,7 @@ ol {
   text-transform: uppercase;
   color: var(--color-white);
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .subscription-description {
@@ -217,6 +319,15 @@ ol {
   line-height: 26px;
   text-align: center;
   color: var(--color-white);
+  margin-bottom: 54px;
+}
+
+.subscription-form {
+  text-align: center;
+}
+
+.subscribe-button {
+  padding: 8px 50px;
 }
 
 /* catalog-page */
@@ -229,6 +340,8 @@ ol {
   margin: 0 auto;
   width: 1200px;
   height: 412px;
+  padding: 35px 70px 70px;
+  box-sizing: border-box;
 }
 
 .inner-catalog-title {
@@ -236,6 +349,13 @@ ol {
   line-height: 78px;
   font-weight: 700;
   color: var(--color-white);
+  margin-bottom: 8px;
+}
+
+.breadcrumbs-list {
+  margin-bottom: 40px;
+  display: flex;
+  column-gap: 28px;
 }
 
 .breadcrumbs-item,
@@ -245,11 +365,8 @@ ol {
 }
 
 .inner-hotels {
-  padding: 0 70px;
+  padding: 50px 70px 60px 70px;
   margin: 0 auto;
-}
-
-.control-select {
 }
 
 .inner-hotels-title {
@@ -259,21 +376,28 @@ ol {
   text-transform: uppercase;
 }
 
+.sorting-icons-list {
+  display: flex;
+  column-gap: 8px;
+}
+
 .sorting-container {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .hotels-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin-bottom: 16px;
 }
 
 .filter-container {
   display: flex;
   column-gap: 70px;
-  padding: 35px 70px 70px 70px;
+  justify-content: space-between;
 }
 
 .checkbox-group {
@@ -296,13 +420,21 @@ ol {
 .hotels-item {
   width: 340px;
   margin-right: 20px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.hotels-item-image {
+  margin-bottom: 16px;
 }
 
 .hotels-item:nth-child(3n) {
   margin-right: 0;
 }
+.hotels-type {
+  line-height: 21px;
+}
 
-.hotels-type,
 .hotels-price {
   line-height: 21px;
 }
@@ -312,8 +444,26 @@ ol {
   color: var(--color-white);
 }
 
+.pagination-list {
+  display: flex;
+}
+
 .pagination-item {
   background-color: var(--color-lightblue);
+  margin-right: 8px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
+}
+
+.pagination-link {
+  display: block;
+  width: 60px;
+  height: 60px;
+  box-sizing: border-box;
+  padding: 12px 24px;
+  text-decoration: none;
 }
 
 .pagination-link {
@@ -338,24 +488,51 @@ ol {
 .footer-container {
   display: flex;
   justify-content: space-between;
+  padding: 45px 70px 35px 81px;
+}
+
+.footer-socials-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  margin-top: 13px;
+}
+
+.footer-socials-item {
+  margin-right: 26px;
 }
 
 .button-vk {
   background-color: var(--color-white);
   background-image: url("../images/socials/vk-icon.svg");
   background-repeat: no-repeat;
+  display: block;
+  width: 25px;
+  height: 20px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .button-telegram {
   background-color: var(--color-white);
   background-image: url("../images/socials/tg-icon.svg");
   background-repeat: no-repeat;
+  display: block;
+  box-sizing: border-box;
+  width: 25px;
+  height: 20px;
+  padding: 10px;
 }
 
 .button-youtube {
   background-color: var(--color-white);
   background-image: url("../images/socials/youtube-icon.svg");
   background-repeat: no-repeat;
+  display: block;
+  box-sizing: border-box;
+  width: 25px;
+  height: 20px;
+  padding: 10px;
 }
 
 .footer-contacts-phone {
