--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,13 +111,29 @@ p {
   display: block;
 }
 
+.navigation-item {
+  position: relative;
+}
+
+.navigation-link-current:after {
+  content: "";
+  position: absolute;
+  top: 2;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: auto;
+  height: 2px;
+  background-color: var(--color-brown);
+}
+
 .controls-list {
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
 }
 
-.controls-list .controls-link {
+.controls-link {
   display: block;
   padding-top: 22px;
   padding-bottom: 22px;
