--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,8 +220,8 @@ input {
 }
 
 .advantages-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .advantages-item {
@@ -239,8 +239,8 @@ input {
 }
 
 .wide-element {
-  width: 800px;
   padding: 0;
+  grid-column: span 2;
 }
 
 .advantages-title {
